<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivTitleIcon"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:contentDescription="@string/sTitleIcon"
        android:cropToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/sTitleAuthor"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/ivTitleIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:text="@string/sTitleTime"
        app:layout_constraintBottom_toTopOf="@+id/tvPost"
        app:layout_constraintEnd_toEndOf="@+id/tvAuthor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvAuthor"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tbMenu"
        style="@style/Widget.AppTheme.LikedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/sMenu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPost"
        android:layout_width="391dp"
        android:layout_height="183dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sPostBody"
        app:layout_constraintBottom_toTopOf="@+id/ivViewes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/br1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvTime"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="62dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/br2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvPost"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tbLikes"
        style="@style/Widget.AppTheme.LikedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/ic_like_24dp"
        android:checkable="true"
        android:contentDescription="@string/sLike"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPost"
        tools:checked="true"
        tools:text="XXX" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tbShares"
        style="@style/Widget.AppTheme.LikedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sShares"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@+id/tbLikes"
        app:layout_constraintTop_toBottomOf="@+id/tvPost"
        tools:checked="false"
        tools:text="XXX" />

    <ImageView
        android:id="@+id/ivViewes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sViewes"
        app:layout_constraintBottom_toBottomOf="@+id/tvViewes"
        app:layout_constraintEnd_toStartOf="@+id/tvViewes"
        app:layout_constraintTop_toTopOf="@+id/tvViewes"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

    <TextView
        android:id="@+id/tvViewes"
        android:layout_width="29dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/iViewes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPost" />

</androidx.constraintlayout.widget.ConstraintLayout>